event_engine/capi/c_engine.h

// ========== Structs ==========

typedef struct evt_engine_task {
    evt_topic*          topic;    // timer topic
    evt_message_payload payload;  // embedded payload for fast access
} evt_engine_task;
typedef struct evt_engine_timer_ctx {
    /* Linked-list node. The list is kept sorted by next_due ascending, so the
       head is always the next timer ctx to tick. One ctx exists per registered
       interval; every task in the ctx fires together on each tick. */
    struct evt_engine_timer_ctx* next;
    /* Firing switch for this ctx's tasks — there is no per-task gating.
       Registering (re)arms the ctx, so any registration reactivates a paused
       timer; c_evt_engine_set_timer_active pauses/resumes every ctx without
       releasing tasks. */
    atomic_bool      active;
    double           interval_seconds;  // tick interval shared by all tasks in this ctx
    double           next_due;          // next tick timestamp (aligned to interval boundaries)
    size_t           capacity;          // allocated task buffer capacity
    size_t           n_task;            // registered task count in this ctx
    evt_engine_task* task;              // OWNED — contiguous task buffer (registration order)
} evt_engine_timer_ctx;
typedef struct evt_engine {
    message_queue*        mq;                   // OWNED — message queue backing the engine
    bytemap*              exact_topic_hooks;    // OWNED — exact-topic hook registry
    bytemap*              generic_topic_hooks;  // OWNED — generic-topic hook registry
    double                mq_timeout_seconds;   // timeout for hybrid get
    uint64_t              mq_spin_limit;        // spin limit for hybrid get
    _Atomic uint64_t      seq_id;               // publish sequence counter; atomic ops only
    atomic_bool           active;               // loop switch; atomic store/load only
    evt_engine_timer_ctx* timer;                // OWNED — timer ctx linked-list head (sorted by next_due)
    bytemap*              timer_topics;         // OWNED — timer topic key → ctx registry (filters duplicates)
    size_t                n_timer;              // registered timer task count (across all ctxs)
    double                next_timer_due;       // cached earliest next tick (head ctx next_due)
} evt_engine;
// ========== Forward Declaration ==========

static inline evt_engine*          c_evt_engine_new(allocator_protocol* allocator);
static inline void                 c_evt_engine_free(evt_engine* engine);
static inline evt_message_payload* c_evt_engine_get(evt_engine* engine, bool block, size_t max_spin, double timeout);
static inline void                 c_evt_engine_trigger(evt_engine* engine, evt_message_payload* msg);
static inline bool                 c_evt_engine_is_active(const evt_engine* engine);
static inline void                 c_evt_engine_set_active(evt_engine* engine, bool active);
static inline uint64_t             c_evt_engine_get_seq_id(const evt_engine* engine);
static inline int                  c_evt_engine_register_timer(evt_engine* engine, evt_topic* topic, double interval_seconds, const void* payload_args);
static inline int                  c_evt_engine_unregister_timer(evt_engine* engine, evt_topic* topic);
static inline void                 c_evt_engine_set_timer_active(evt_engine* engine, bool active);
// ========== Public APIs (Lifecycle Management) ==========

/**
 * @brief Allocate and initialize a new event engine.
 * @param allocator allocator_protocol for the allocation (NULL uses the default).
 * @return Newly allocated evt_engine, or NULL on allocation failure.
 */
static inline evt_engine* c_evt_engine_new(allocator_protocol* allocator) {
    evt_engine* engine = (evt_engine*) c_ap_alloc(sizeof(evt_engine), allocator);
    if (!engine) return NULL;

    int ret_code = c_evt_engine_init(engine, allocator);
    if (ret_code != EVT_RET_OK) {
        c_ap_free(engine);
        return NULL;
    }

    return engine;
}
/**
 * @brief Destroy an evt_engine created by c_evt_engine_new.
 * @param engine Engine to destroy (may be NULL).
 */
static inline void c_evt_engine_free(evt_engine* engine) {
    if (!engine) return;

    c_evt_engine_dealloc(engine);

    c_ap_free(engine);
}
/**
 * @brief Atomically query whether the engine loop is active.
 * @param engine Engine to inspect (may be NULL).
 * @return true when active, false otherwise.
 */
static inline bool c_evt_engine_is_active(const evt_engine* engine) {
    return engine ? atomic_load_explicit(&engine->active, memory_order_acquire) : false;
}
/**
 * @brief Atomically set the engine loop state.
 * @param engine Engine to update (may be NULL).
 * @param active New run state.
 */
static inline void c_evt_engine_set_active(evt_engine* engine, bool active) {
    if (!engine) return;
    atomic_store_explicit(&engine->active, active, memory_order_release);
}
/**
 * @brief Atomically query the current publish sequence id.
 * @param engine Engine to inspect (may be NULL).
 * @return Current seq_id, or 0 when engine is NULL.
 */
static inline uint64_t c_evt_engine_get_seq_id(const evt_engine* engine) {
    return engine ? atomic_load_explicit(&engine->seq_id, memory_order_relaxed) : 0;
}
/**
 * @brief Register a timer task on the engine.
 *
 * The task payload is embedded in its ctx's contiguous task buffer and
 * carries @p payload_args as its user data; it is never queued — each tick
 * dispatches it directly to the matching hooks. There is one timer ctx per
 * interval: tasks sharing an interval share one ctx and fire together on the
 * same (interval-aligned) boundaries, while different intervals tick
 * independently. The topic registry filters out already-registered topics —
 * re-registering the same topic returns EVT_RET_ERR_DUPLICATE instead of
 * overriding the payload or double firing.
 *
 * @param engine Engine to register the timer on (must be initialized).
 * @param topic Topic for timer tick payloads (must not be NULL).
 * @param interval_seconds Tick interval shared by all tasks in the ctx (> 0).
 * @param payload_args User data carried by the task payload on every tick.
 * @return EVT_RET_OK on success, error code otherwise.
 */
static inline int c_evt_engine_register_timer(evt_engine* engine, evt_topic* topic, double interval_seconds, const void* payload_args) {
    if (!engine || !engine->mq || !topic) return EVT_RET_ERR_INVALID_INPUT;
    if (interval_seconds <= 0) return EVT_RET_ERR_INVALID_INPUT;

    // Filter out already-registered timer topics (prevents payload override
    // and double firing for the same topic).
    evt_engine_timer_ctx* ctx = NULL;
    c_bytemap_get(engine->timer_topics, topic->key, topic->key_len, (void**) &ctx);
    if (ctx) return EVT_RET_ERR_DUPLICATE;

    allocator_protocol* allocator = c_ap_protocol_from_ptr(engine);
    const double        now = c_evt_engine_monotonic_seconds();

    // One ctx per interval — locate it or create one aligned to the interval
    // boundaries (next_due is always a whole multiple of interval_seconds).
    bool ctx_is_new = false;
    ctx = engine->timer;
    while (ctx && ctx->interval_seconds != interval_seconds) ctx = ctx->next;
    if (!ctx) {
        ctx = (evt_engine_timer_ctx*) c_ap_alloc(sizeof(evt_engine_timer_ctx), allocator);
        if (!ctx) return EVT_RET_ERR_OOM;
        atomic_init(&ctx->active, true);
        ctx->interval_seconds = interval_seconds;
        ctx->next_due = c_evt_engine_timer_align(now, interval_seconds);
        ctx->capacity = 0;
        ctx->n_task = 0;
        ctx->task = NULL;
        ctx->next = NULL;
        ctx_is_new = true;
    }

    // Grow the contiguous task buffer when full
    if (ctx->n_task == ctx->capacity) {
        size_t           new_capacity = ctx->capacity ? ctx->capacity * 2 : 4;
        evt_engine_task* grown = (evt_engine_task*) c_ap_alloc(new_capacity * sizeof(evt_engine_task), allocator);
        if (!grown) {
            if (ctx_is_new) c_ap_free(ctx);
            return EVT_RET_ERR_OOM;
        }
        if (ctx->task) {
            memcpy(grown, ctx->task, ctx->n_task * sizeof(evt_engine_task));
            c_ap_free(ctx->task);
        }
        ctx->task = grown;
        ctx->capacity = new_capacity;
    }

    evt_engine_task* task = &ctx->task[ctx->n_task];
    task->topic = topic;
    task->payload.args = (void*) payload_args;
    task->payload.topic = topic;
    task->payload.seq_id = 0;
    task->payload.fn_dealloc = NULL;
    ctx->n_task += 1;

    // Publish the topic → ctx entry; roll back the task on registry failure
    if (c_bytemap_set(engine->timer_topics, topic->key, topic->key_len, (void*) ctx, NULL) != BYTEMAP_OK) {
        ctx->n_task -= 1;
        if (ctx_is_new) {
            if (ctx->task) c_ap_free(ctx->task);
            c_ap_free(ctx);
        }
        return EVT_RET_ERR_OOM;
    }

    if (ctx_is_new) c_evt_engine_timer_insert(engine, ctx);
    engine->n_timer += 1;

    // Registration (re)arms the ctx — see evt_engine_timer_ctx.active
    atomic_store_explicit(&ctx->active, true, memory_order_release);
    return EVT_RET_OK;
}
/**
 * @brief Unregister a timer task by topic.
 *
 * Releases the task payload through its self-destruct hook (if any) and
 * compacts the ctx's contiguous task buffer (registration order preserved).
 * Unlinks and frees the timer ctx when its last task is removed.
 *
 * @param engine Engine to unregister from (may be NULL).
 * @param topic Topic of the timer task to remove.
 * @return EVT_RET_OK on success, EVT_RET_ERR_NOT_FOUND when unknown.
 */
static inline int c_evt_engine_unregister_timer(evt_engine* engine, evt_topic* topic) {
    if (!engine || !topic) return EVT_RET_ERR_INVALID_INPUT;

    evt_engine_timer_ctx* ctx = NULL;
    if (c_bytemap_get(engine->timer_topics, topic->key, topic->key_len, (void**) &ctx) != BYTEMAP_OK || !ctx) {
        return EVT_RET_ERR_NOT_FOUND;
    }

    // Locate the task by topic key (registry keys and task topics share the
    // same key identity).
    size_t idx = 0;
    bool   found = false;
    for (; idx < ctx->n_task; idx++) {
        evt_topic* task_topic = ctx->task[idx].topic;
        if (task_topic && task_topic->key_len == topic->key_len &&
            memcmp(task_topic->key, topic->key, topic->key_len) == 0) {
            found = true;
            break;
        }
    }
    if (!found) return EVT_RET_ERR_NOT_FOUND;  // registry/task mismatch — defensive

    evt_engine_task* task = &ctx->task[idx];
    if (task->payload.fn_dealloc) task->payload.fn_dealloc(&task->payload);
    for (size_t j = idx + 1; j < ctx->n_task; j++) {
        ctx->task[j - 1] = ctx->task[j];
    }
    ctx->n_task -= 1;
    engine->n_timer -= 1;

    c_bytemap_pop(engine->timer_topics, topic->key, topic->key_len, NULL);

    if (ctx->n_task == 0) {
        c_evt_engine_timer_unlink(engine, ctx);
        if (ctx->task) c_ap_free(ctx->task);
        c_ap_free(ctx);
    }
    return EVT_RET_OK;
}
/**
 * @brief Atomically set the engine timer firing state without releasing tasks.
 *
 * Affects every timer ctx — there is no per-task gating. A later
 * c_evt_engine_register_timer call re-arms its ctx, discarding a paused state.
 *
 * @param engine Engine whose timer to update (may be NULL).
 * @param active New timer firing state.
 */
static inline void c_evt_engine_set_timer_active(evt_engine* engine, bool active) {
    if (!engine) return;
    evt_engine_timer_ctx* ctx = engine->timer;
    while (ctx) {
        atomic_store_explicit(&ctx->active, active, memory_order_release);
        ctx = ctx->next;
    }
}
static inline evt_message_payload* c_evt_engine_get(evt_engine* engine, bool block, size_t max_spin, double timeout) {
    if (!engine || !engine->mq) return NULL;

    evt_message_payload* msg = NULL;
    int                  ret_code = block ? c_mq_get_hybrid(engine->mq, &msg, max_spin, timeout) : c_mq_get(engine->mq, &msg);
    if (ret_code != EVT_RET_OK) return NULL;
    return msg;
}
static inline void c_evt_engine_trigger(evt_engine* engine, evt_message_payload* msg) {
    evt_topic* msg_topic = msg->topic;

    // Step 1: Match exact_topic_hooks
    evt_hook* hook = NULL;
    c_bytemap_get(engine->exact_topic_hooks, msg_topic->key, msg_topic->key_len, (void**) &hook);
    if (hook) c_evt_hook_invoke(hook, msg);

    // Step 2: Match generic_topic_hooks
    bytemap_entry* entry = c_bytemap_first(engine->generic_topic_hooks);
    while (entry) {
        hook = (evt_hook*) c_bytemap_entry_value(entry);
        if (!hook) {
            entry = entry->next;
            continue;
        }
        bool is_matched = c_topic_match_bool(hook->topic, msg_topic);
        if (is_matched) c_evt_hook_invoke(hook, msg);
        entry = entry->next;
    }
}